// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignInWithEmailForm match snapshot when tenant is not private 1`] = `
<div>
  <form>
    <div
      class="mb-6 flex flex-col gap-3"
    >
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="relative"
        >
          <input
            class="input  input-lg pl-10 pr-10 "
            name="email"
            placeholder="ID"
            type="email"
          />
          <div
            class="absolute-y-center absolute left-[14px] flex items-center gap-2"
          >
            <svg
              class="inline-block text-tertiary"
              height="20"
              width="20"
            />
          </div>
          <div
            class="absolute-y-center absolute right-[14px] flex items-center gap-2"
          >
            <svg
              class="inline-block text-blue-primary"
              height="20"
              width="20"
            />
          </div>
        </div>
      </div>
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="relative"
        >
          <input
            class="input  input-lg pl-10 pr-10 "
            name="password"
            placeholder="Password"
            type="password"
          />
          <div
            class="absolute-y-center absolute left-[14px] flex items-center gap-2"
          >
            <svg
              class="inline-block text-tertiary"
              height="20"
              width="20"
            />
          </div>
          <div
            class="absolute-y-center absolute right-[14px] flex items-center gap-2"
          >
            <svg
              class="inline-block text-blue-primary"
              height="20"
              width="20"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col gap-1"
    >
      <button
        class="btn btn-lg btn-primary"
        disabled=""
        type="submit"
      >
        button.sign-in
      </button>
      <button
        class="btn btn-lg btn-secondary"
        type="button"
      >
        button.sign-up
      </button>
    </div>
  </form>
  <div
    style="position: fixed; z-index: 9999; top: 16px; left: 16px; right: 16px; bottom: 16px; pointer-events: none;"
  />
</div>
`;

exports[`SignInWithEmailForm match snapshot when tenant is private 1`] = `
<div>
  <form>
    <div
      class="mb-6 flex flex-col gap-3"
    >
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="relative"
        >
          <input
            class="input  input-lg pl-10 pr-10 "
            name="email"
            placeholder="ID"
            type="email"
          />
          <div
            class="absolute-y-center absolute left-[14px] flex items-center gap-2"
          >
            <svg
              class="inline-block text-tertiary"
              height="20"
              width="20"
            />
          </div>
          <div
            class="absolute-y-center absolute right-[14px] flex items-center gap-2"
          >
            <svg
              class="inline-block text-blue-primary"
              height="20"
              width="20"
            />
          </div>
        </div>
      </div>
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="relative"
        >
          <input
            class="input  input-lg pl-10 pr-10 "
            name="password"
            placeholder="Password"
            type="password"
          />
          <div
            class="absolute-y-center absolute left-[14px] flex items-center gap-2"
          >
            <svg
              class="inline-block text-tertiary"
              height="20"
              width="20"
            />
          </div>
          <div
            class="absolute-y-center absolute right-[14px] flex items-center gap-2"
          >
            <svg
              class="inline-block text-blue-primary"
              height="20"
              width="20"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col gap-1"
    >
      <button
        class="btn btn-lg btn-primary"
        disabled=""
        type="submit"
      >
        button.sign-in
      </button>
    </div>
  </form>
  <div
    style="position: fixed; z-index: 9999; top: 16px; left: 16px; right: 16px; bottom: 16px; pointer-events: none;"
  />
</div>
`;
